--- a/package.json
+++ b/package.json
@@ -3,17 +3,28 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "directories": {
     "example": "examples"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --watch",
+    "build": "vite build",
     "s": "serve"
   },
   "author": "",
   "license": "ISC",
-  "type": "module",
   "dependencies": {
-    "serve": "^14.0.1"
+    "@types/jest": "^29.0.3",
+    "serve": "^14.0.1",
+    "typescript": "^4.8.3"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.19.1",
+    "@babel/preset-env": "^7.19.1",
+    "@babel/preset-typescript": "^7.18.6",
+    "babel-jest": "^29.0.3",
+    "jest": "^29.0.3",
+    "vite": "^3.1.3"
   }
 }
